# dgm-2025.2

./: .gitignore  E1-orientacoes.md  E1-template.md  E2-E3_template.md  E2-orientacoes.md  E3-orientacoes.md  README.md
projects/hyperskin/: .gitignore  README.md  TEMPLATE_README.md  USAGE_README.md  USER_GUIDE.md  aug_exp.sh  class_synth.sh  clean_cpkt.py  config.yaml  eval_test.sh  mkfolder_synth.py  pyproject.toml  requirements.txt  synthesis_shsgan_exp.sh  tutorial_how-to_export_dataset.txt
projects/hyperskin/configs/: default.yaml
projects/hyperskin/configs/data/: hsi_dermoscopy.yaml  hsi_dermoscopy_3class.yaml  hsi_dermoscopy_aug.yaml  hsi_dermoscopy_cropped.yaml  hsi_dermoscopy_cropped_aug.yaml  hsi_dermoscopy_croppedv2.yaml  hsi_dermoscopy_croppedv2_aug.yaml  hsi_dermoscopy_croppedv2_aug_isic2019.yaml  hsi_dermoscopy_croppedv2_aug_nosynth.yaml  hsi_dermoscopy_croppedv2_aug_nosynth_batchr.yaml  hsi_dermoscopy_croppedv2_augsynth.yaml  hsi_dermoscopy_croppedv2_gan.yaml  hsi_dermoscopy_croppedv2_notaug.yaml  hsi_dermoscopy_croppedv2_notaug_batchr.yaml  hsi_dermoscopy_croppedv2_notaugsynth.yaml  hsi_dermoscopy_croppedv2_vae.yaml  hsi_dermoscopy_full-train1_equal.yaml  hsi_dermoscopy_full-train1_imb.yaml  hsi_dermoscopy_full-val1_equal.yaml  hsi_dermoscopy_full-val1_imb.yaml  hsi_dermoscopy_grad-split.yaml  hsi_dermoscopy_mixed-train03.yaml  hsi_dermoscopy_mixed-train05.yaml  hsi_dermoscopy_mixed-train07.yaml  hsi_dermoscopy_mixed-train1_bal.yaml  hsi_dermoscopy_mixed-train1_comp.yaml  hsi_dermoscopy_mixed-train1_imb.yaml  hsi_dermoscopy_no_aug.yaml  hsi_dermoscopy_seg.yaml  hsi_dermoscopy_synth.yaml  hsi_dermoscopy_synth_cropped.yaml  hsi_dermoscopy_train-synth.yaml  hsi_dermoscopy_val-synth.yaml  joint_rgb_hsi_dermoscopy.yaml  milk10k.yaml  milk10k_cropped.yaml
projects/hyperskin/configs/model/: densenet201_fromscratch.yaml  densenet201_fromscratch_focalloss.yaml  densenet201_fromscratch_lr0001.yaml  gan.yaml  hsi_classifier.yaml  hsi_classifier_densenet201.yaml  hsi_classifier_densenet201_best.yaml  hsi_classifier_densenet201_focalloss.yaml  hsi_classifier_isic2019.yaml  hsi_classifier_not-pretrained.yaml  hsi_classifier_not-pretrained_3classes.yaml  hsi_classifier_not-pretrained_3classes_lr001.yaml  hsi_classifier_not-pretrained_lr001.yaml  hsi_classifier_regnet.yaml  hsi_cycle_fastgan.yaml  hsi_cycle_gan.yaml  hsi_fastgan.yaml  hsi_gan.yaml  hsi_seg.yaml  hsi_spade_fastgan.yaml  hsi_wgan.yaml  shs_gan-nogp.yaml  shs_gan.yaml  shs_gan_3channels.yaml  shs_gan_fft.yaml  shs_wgan.yaml  simplenet.yaml  vae.yaml
projects/hyperskin/notebooks/: Baseline runs (no synthetic data) (1).xlsx  Synthetic data runs (1).xlsx  densenet_isic2019_runs.xlsx  explore.ipynb  explore_synth_runs.ipynb  mask_exploration.ipynb  segmentation.ipynb  synth_data_exploration.ipynb  synth_embeds.ipynb
projects/hyperskin/scripts/: class_synth.sh  clear_wandb_cache.py  create_datafold.py  crop_mat_files.py  evaluate_generators.py  fix_checkpoint.py  fix_fastgan_barlow_optim.py  fix_isic_path_mapping.py  generate_samples.sh  get_best_f1.py  get_best_f1_wandb.py  get_metrics_on_best_metric_wandb.py  get_synth_dir_run_ids.py  get_wandb_runs_contain_name.py  labelme_extract_masks.py  make_grid.py  organize_isic_masks.py  overlay_masks.py  reconstruct_labelme.py  rename_images_only_isic.py  rename_masks.py  reorganize_images_only_masks.py  reshape_mat.py  roi_segment.py  run_isic2019_test.sh  validate_data.py
projects/hyperskin/src/: exporting_synthetic_dataset.ipynb  main.py  testing_dataset.ipynb  validation.py  validation_final.py
projects/hyperskin/src/callbacks/: __init__.py  image_saving.py  model_checkpoint.py
projects/hyperskin/src/data_modules/: __init__.py  base.py  hsi_dermoscopy.py  isic2019.py  joint_rgb_hsi_dermoscopy.py  milk10k.py  utils.py
projects/hyperskin/src/losses/: __init__.py  focal_loss.py  spectral.py
projects/hyperskin/src/metrics/: image_precision_recall.py  inception.py  synthesis_metrics.py
projects/hyperskin/src/models/: __init__.py  isic2019.py  smp.py  timm.py  utils.py
projects/hyperskin/src/modules/: __init__.py  gan.py  hsi_classifier_module.py  hsi_segmentation_module.py  shs_gan_module.py  shs_gan_module_nogp.py  vae_module.py  validation.py
projects/hyperskin/src/samplers/: __init__.py  balanced_batch_sampler.py  finite.py  infinite.py
projects/hyperskin/src/transforms/: __init__.py  diffaug.py  norm_min_max.py
projects/hyperskin/src/utils/: cli.py  dataset_exporter.py  mosaic.py  spectra_plot.py  tags_and_run_name.py  transform.py  utils.py
projects/spectrogram-dreamer/: .gitignore  README.md  eval.py  eval.sh  infer.py  infer.sh  inference_with_style.py  main.py  pipeline.sh  pyproject.toml  requirements.txt  run.sh
projects/spectrogram-dreamer/mlruns/0/: meta.yaml
projects/spectrogram-dreamer/mlruns/789017296987570404/: meta.yaml
projects/spectrogram-dreamer/mlruns/847030684811318288/: meta.yaml
projects/spectrogram-dreamer/notebooks/: experiments.ipynb
projects/spectrogram-dreamer/spectrogram/: README.md  apply_vq_tokenizer.py  pt2audio.py  pt2png.py  requirements.txt  spectogram.py  tokenizer.py  validate_vq_reconstruction.py
projects/spectrogram-dreamer/src/: mlflow_utils.py  training.py  visualize.py
projects/spectrogram-dreamer/src/dataset/: README.md  (+7 more)
projects/spectrogram-dreamer/tokenizer/: analyze_tokens.py  apply_vq_tokenizer.py  example_tokenization.py  plot_training.py  tokenizer.py  train_vq_tokenizer.py
projects/spectrogram-dreamer/utils/: duration.py  filter_non_validated.py  split.py
projects/spectrogram-dreamer/wm_training/: audio_dataset.py  train_audio_world_model.py  train_val_split.py
projects/super_resolution/: .gitignore  E1_E2_E3_README.md  E1_E2_README.md  E1_README.md  E2_README.md  E3_super_resolution.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
projects/super_resolution/src/: app.py  requirements.txt  sampler_invsr.py
projects/super_resolution/validation/: README.md  __init__.py  image_downsampler.py  lpips_validator.py  main_validation.py  psnr_validator.py  ssim_validator.py
(+650 files in other folders)
