[project]
name = "spectrogram-dreamer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asttokens==3.0.0",
    "colorlog==6.10.1",
    "configparser==7.2.0",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "decorator==5.2.1",
    "executing==2.2.1",
    "filelock==3.20.0",
    "fonttools==4.60.1",
    "frechet-audio-distance>=0.3.2",
    "fsspec==2025.10.0",
    "ipython==9.7.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "kiwisolver==1.4.9",
    "markupsafe==3.0.3",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.2.1",
    "mel-cepstral-distance>=0.0.4",
    "mlflow>=3.6.0",
    "mpmath==1.3.0",
    "networkx==3.5",
    "numpy==1.26.4",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pillow==12.0.0",
    "prompt-toolkit==3.0.52",
    "protobuf==4.25.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pymysql==1.1.2",
    "pyparsing==3.2.5",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "scikit-learn==1.7.2",
    "scipy==1.16.3",
    "six==1.17.0",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "torch==2.2.2",
    "torchaudio==2.2.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "vocos>=0.1.0",
    "wcwidth==0.2.14",
]
